--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,10 @@ a:-webkit-any-link {
 	color: white;
 	text-decoration: none;
 }
+
+.link {
+	margin: 5px 5px 5px 5px;
+    padding: 5px 5px 5px 5px;
+    font-size: 30;
+    border: 2px solid;
+}
