--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ a:-webkit-any-link {
 .link {
 	margin: 5px 5px 5px 5px;
     padding: 5px 5px 5px 5px;
+	white-space: nowrap;
     font-size: 30;
     border: 2px solid;
 	border-radius: 3px;
