--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ a:-webkit-any-link {
 	margin: 5px 5px 5px 5px;
     padding: 5px 5px 5px 5px;
 	white-space: nowrap;
+	display: inline-block;
     font-size: 30;
     border: 2px solid;
 	border-radius: 3px;
