--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
 	text-align: center;
 	color: white;
     margin: 5em;
+	font-weight: 400;
 }
 
 a:-webkit-any-link {
@@ -18,4 +19,12 @@ a:-webkit-any-link {
     font-size: 30;
     border: 2px solid;
 	border-radius: 3px;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v14/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2) format('woff2');
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
