--- a/css/main.css
+++ b/css/main.css
@@ -14,12 +14,13 @@ a:-webkit-any-link {
 
 .link {
 	margin: 5px 5px 5px 5px;
-    padding: 5px 5px 5px 5px;
+    padding: 8px 8px 8px 8px;
 	white-space: nowrap;
 	display: inline-block;
-    font-size: 30;
+    font-size: 24;
     border: 2px solid;
 	border-radius: 3px;
+	font-weight: bold;
 }
 
 @font-face {
