--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,19 @@ a:-webkit-any-link {
 	text-decoration: none;
 }
 
+td {
+	text-align: center;
+	border: 1px solid;
+}
+
+th {
+	
+}
+table {
+	border: 2px solid;
+	border-spacing: 0;
+}
+
 .link {
 	margin: 5px 5px 5px 5px;
     padding: 8px 8px 8px 8px;
