--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,6 @@ a:-webkit-any-link {
 
 td {
 	text-align: center;
-	border: 1px solid;
 }
 
 th {
@@ -23,6 +22,8 @@ th {
 table {
 	border: 2px solid;
 	border-spacing: 0;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .link {
