--- a/css/main.css
+++ b/css/main.css
@@ -17,13 +17,14 @@ td {
 }
 
 th {
-	
+	border-bottom: 2px solid lightblue;
 }
 table {
 	border: 2px solid;
 	border-spacing: 0;
 	margin-left: auto;
 	margin-right: auto;
+	padding: 5px;
 }
 
 .link {
