--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,8 @@ table {
 	margin-left: auto;
 	margin-right: auto;
 	padding: 5px;
+	border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 .link {
