--- a/css/main.css
+++ b/css/main.css
@@ -15,10 +15,12 @@ a:-webkit-any-link {
 td {
 	text-align: center;
 	font-size: 14;
+	padding: 5px;
 }
 
 th {
 	border-bottom: 2px solid lightblue;
+	padding: 5px;
 }
 table {
 	border: 2px solid;
