--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,11 @@ th {
 	border-bottom: 2px solid lightblue;
 	padding: 5px;
 }
+
+th {
+	cursor: pointer;
+}
+
 table {
 	overflow: hidden;
 	border: 2px solid;
