--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,10 @@ tr.border_bottom td {
 	color: yellow;
 }
 
+.angie {
+	color: hotpink;
+}
+
 .link {
 	margin: 5px 5px 5px 5px;
     padding: 8px 8px 8px 8px;
