--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,13 @@ tr.border_bottom td {
 	background-color: black;
 	top: 0;
     left: 0;
+	height: 40px;
+}
+
+.header-links {
+	padding: 10px;
+	vertical-align: middle;
+	display: inline-block;
 }
 
 @font-face {
