--- a/css/main.css
+++ b/css/main.css
@@ -88,17 +88,17 @@ tr.border_bottom td {
 	background-color: black;
 	top: 0;
     left: 0;
-	transition: 1s;
 }
 
 .header-links {
 	padding: 10px;
+	transition: 1s;
 	vertical-align: middle;
 	display: inline-block;
 }
 
 .header-links:hover {
-	border: 2px solid;
+	border-bottom: 2px solid;
 }
 
 @font-face {
