--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
 body {
 	background-color: #101010;
 	text-align: center;
 	color: white;
     margin: 5em;
-	font-family: montserrat;
+	font-family: 'Roboto', sans-serif;
 	font-weight: 400;
 }
 
@@ -16,6 +18,12 @@ td {
 	text-align: center;
 	font-size: 14;
 	padding: 5px;
+}
+
+#viewer{
+	margin: auto;
+	max-width: 65%;
+	margin-top: 0;
 }
 
 th {
@@ -45,12 +53,12 @@ tr.border_bottom td {
 	border-bottom: 1pt solid white;
 }
 
-.admin {
+span#А{
 	color: #6666ff;
 }
 
-.mod {
-	color: yellow;
+span#М{
+	color: rgb(230, 204, 22); /* Changed to LS Discord Server Role Color */
 }
 
 .angie {
@@ -88,50 +96,31 @@ tr.border_bottom td {
 	background-color: black;
 	top: 0;
     left: 0;
-	height: 40px;
 }
 
-.header-links {
+.header a {
 	padding: 10px;
-	transition: 0.2s;
-	font-size: 14px;
 	vertical-align: middle;
 	display: inline-block;
+	border-bottom: 3px solid transparent
 }
 
-.header-links:hover {
-	border-bottom: 2px solid;
-	font-size: 15px;
+.header a:hover {
+	background: rgba(255,255,255,0.15);
+	-webkit-transition: background-color .2s;
+	transition: background-color .2s, border .2s;
+	border-bottom: 3px solid #1A59AF
 }
 
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v14/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2) format('woff2');
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+.active {
+	background: rgba(255,255,255,0.25);
 }
 
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Montserrat Bold'), local('Montserrat-Bold'), url(https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_dJE3g3D_u50.woff2) format('woff2');
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+#commandtab {
+	cursor: pointer;
 }
 
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v14/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Montserrat Bold'), local('Montserrat-Bold'), url(https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+img {
+	max-width: 100%;
+	max-height: 100%;
 }
