--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 	background-color: #101010;
 	text-align: center;
 	color: white;
-    margin: 5em;
+        margin: 6em;
 	font-family: 'Roboto', sans-serif;
 	font-weight: 400;
 }
@@ -30,6 +30,10 @@ th {
 	border-bottom: 2px solid lightblue;
 	padding: 5px;
 	cursor: pointer;
+}
+
+th#unsortable {
+	cursor: auto;
 }
 
 table {
