--- a/css/main.css
+++ b/css/main.css
@@ -141,3 +141,72 @@ img {
 	max-width: 100%;
 	max-height: 100%;
 }
+
+
+nav {
+	display: inline-block;
+}
+
+nav ul {
+	margin: 0;
+	padding: 0;
+}
+
+nav ul li {
+	font-size: unset;
+	margin: 0;
+}
+
+nav ul ul {
+	display: none;
+}
+
+nav ul > li {
+  position: relative;
+}
+
+nav ul li:hover > ul {
+	display: block;
+}
+
+nav ul:after {
+	content: "";
+	clear: both;
+	display: block;
+}
+	
+nav ul ul {
+	background: #000000;
+	border-radius: 0px;
+	padding: 0;
+	position: absolute;
+	top: 20%;
+	left: 100%;
+}
+nav ul ul li {
+	float: none; 
+	position: relative;
+	white-space: nowrap;
+	text-align: center;
+	border-bottom: 3px solid transparent;
+}
+	
+nav ul ul li:hover {
+	background: rgba(255,255,255,0.15);
+	-webkit-transition: background-color .2s;
+	transition: background-color .2s, border .2s;
+	border-bottom: 3px solid #1A59AF
+}
+
+nav ul ul li a:hover {
+	background: none !important;
+	-webkit-transition: none !important;
+	transition: none !important;
+	border-bottom: 3px solid transparent !important;
+}
+	
+nav ul ul ul {
+	position: absolute;
+	left: 100%;
+	top: 0;
+}		
